--- a/css/ubicaciones.css
+++ b/css/ubicaciones.css
@@ -1,13 +1,14 @@
 .crud-table {
     background: #fff;
-    border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
     width: 100%;
     margin-bottom: 1rem;
 }
 
 .crud-table thead {
-    background-color: #3b94ee;
+    background-color: #2d52ae;
 }
 
 .crud-table tbody tr {
@@ -22,4 +23,29 @@
 .crud-table th, .crud-table td {
     padding: 10px;
     text-align: left;
+}
+
+.ubicaciones-tabla-color {
+    color: #ffffff;
+}
+
+.delete-ubicacion {
+    background-color: rgb(255, 62, 62);
+}
+
+.delete-ubicacion:hover{
+    background-color: rgb(162, 35, 35);
+}
+
+.create-button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.create-button:hover {
+    background-color: #218838;
 }
